# elixa-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
elixa/: __init__.py  cli.py  client.py  config.py  formatters.py
