[project]
name = "elixa"
version = "0.2.5"
description = "CLI for Elixa — the structured product search engine for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Fawaaz Abbas", email = "fawaazabbas2@gmail.com" },
]
maintainers = [
    { name = "Elixa", email = "hello@elixa.app" },
]
keywords = [
    "search",
    "shopping",
    "products",
    "ai-agents",
    "llm",
    "cli",
    "e-commerce",
    "product-feed",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12.0",
    "httpx>=0.28.0",
    "rich>=13.7.0",
]

[project.scripts]
elixa = "elixa.cli:main_entrypoint"

[project.urls]
Homepage      = "https://search.elixa.app"
Documentation = "https://search.elixa.app/docs"
Source        = "https://github.com/FawaazAbbas/elixa-cli"
Issues        = "https://github.com/FawaazAbbas/elixa-cli/issues"
Changelog     = "https://github.com/FawaazAbbas/elixa-cli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "twine>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elixa"]

[tool.hatch.build.targets.sdist]
include = [
    "elixa/**/*.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
